--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
-    "start:dev": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "webpack serve"
   },
   "repository": {
     "type": "git",
